compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_variable_starting_pipeline_steps.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "fn map(value, fn_over_value) { todo }\n\npub fn main() {\n  1\n  |> Ok\n  |> map(fn(value) { value + 2 })\n}"
---
----- BEFORE ACTION
fn map(value, fn_over_value) { todo }

pub fn main() {
  1
  ▔
  |> Ok
▔▔▔▔▔↑ 
  |> map(fn(value) { value + 2 })
}


----- AFTER ACTION
fn map(value, fn_over_value) { todo }

pub fn main() {
  let result =
    1
  |> Ok

  result
  |> map(fn(value) { value + 2 })
}
