compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__fix_float_operator_on_ints_2.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  1 -. 2\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  1 -. 2
  ▔▔▔▔▔↑
}


----- AFTER ACTION

pub fn main() {
  1 - 2
}
