compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__generate_dynamic_decoder_for_multi_variant_type.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub type Wibble {\n  Wibble(wibble: Int, next: Wibble)\n  Wobble(wobble: Float, text: String, values: List(Bool))\n}\n"
---
----- BEFORE ACTION

pub type Wibble {
    ↑            
  Wibble(wibble: Int, next: Wibble)
  Wobble(wobble: Float, text: String, values: List(Bool))
}


----- AFTER ACTION
import gleam/dynamic/decode

pub type Wibble {
  Wibble(wibble: Int, next: Wibble)
  Wobble(wobble: Float, text: String, values: List(Bool))
}

fn wibble_decoder() -> decode.Decoder(Wibble) {
  use variant <- decode.field("type", decode.string)
  case variant {
    "wibble" -> {
      use wibble <- decode.field("wibble", decode.int)
      use next <- decode.field("next", wibble_decoder())
      decode.success(Wibble(wibble:, next:))
    }
    "wobble" -> {
      use wobble <- decode.field("wobble", decode.float)
      use text <- decode.field("text", decode.string)
      use values <- decode.field("values", decode.list(decode.bool))
      decode.success(Wobble(wobble:, text:, values:))
    }
    _ -> decode.failure(todo as "Zero value for Wibble", "Wibble")
  }
