compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__generate_dynamic_decoder_recursive_type.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport gleam/option\n\npub type LinkedList {\n  LinkedList(value: Int, next: option.Option(LinkedList))\n}\n"
---
----- BEFORE ACTION

import gleam/option

pub type LinkedList {
    ↑                
  LinkedList(value: Int, next: option.Option(LinkedList))
}


----- AFTER ACTION

import gleam/dynamic/decode
import gleam/option

pub type LinkedList {
  LinkedList(value: Int, next: option.Option(LinkedList))
}

fn linked_list_decoder() -> decode.Decoder(LinkedList) {
  use value <- decode.field("value", decode.int)
  use next <- decode.field("next", decode.optional(linked_list_decoder()))

  decode.success(LinkedList(value:, next:))
}
