compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__generate_function_picks_argument_name_based_on_record_access.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub type User {\n    User(id: Int, name: String)\n}\n\npub fn go(user: User) {\n  authenticate(user.id, user.name)\n}\n"
---
----- BEFORE ACTION

pub type User {
    User(id: Int, name: String)
}

pub fn go(user: User) {
  authenticate(user.id, user.name)
  ↑                               
}


----- AFTER ACTION

pub type User {
    User(id: Int, name: String)
}

pub fn go(user: User) {
  authenticate(user.id, user.name)
}

fn authenticate(id: Int, name: String) -> a {
  todo
}
