compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__generate_json_encoder_already_imported_module.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport gleam/json as json_encoding\n\npub type Wibble {\n  Wibble(a: Int, b: Float, c: String)\n}\n"
---
----- BEFORE ACTION

import gleam/json as json_encoding

pub type Wibble {
    ↑            
  Wibble(a: Int, b: Float, c: String)
}


----- AFTER ACTION

import gleam/json as json_encoding

pub type Wibble {
  Wibble(a: Int, b: Float, c: String)
}

fn encode_wibble(wibble: Wibble) -> json_encoding.Json {
  let Wibble(a:, b:, c:) = wibble
  json_encoding.object([
    #("a", json_encoding.int(a)),
    #("b", json_encoding.float(b)),
    #("c", json_encoding.string(c)),
  ])
}
